[tool.poetry]
name = "agnostic"
version = "1.0.3"
description = "Agnostic Database Migrations"
authors = ["Mark E. Haase <mehaase@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "agnostic", from = "src" },
]

[tool.poetry.scripts]
agnostic = "agnostic.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=7.0"
sqlparse = ">=0.2.4,<0.3.0"
pymysql = {extras = ["mysql"], version = "^1.1.0"}
pg8000 = {extras = ["postgres"], version = "^1.30.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
bumpver = "^2023.1125"
sphinx = "^7.1.2"
sphinx-rtd-theme = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "1.0.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"docs/conf.py" = [
    # "version = '{MAJOR.MINOR}'",
    "release = '{version}'"
]
